--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       
       // Simulate API call
       try {
-        const response = await fetch("http://127.0.0.1:5000/recommend", {
+        const response = await fetch("https://cinesync-movierecommender.onrender.com/recommend", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ movie_name: movie })
@@ -340,4 +340,5 @@
         `;
         results.appendChild(div);
       });
+
     }</script></body></html>
