--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       
       // Simulate API call
       try {
-        const response = await fetch("https://cinesync-movierecommender.onrender.com/recommend", {
+        const response = await fetch("https://cine-sync-movie-recommender--ananyaashaji.replit.app/recommend", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ movie_name: movie })
@@ -342,3 +342,4 @@
       });
 
     }</script></body></html>
+
